force-app/main/default/objects/Account/fields/Account_Est_Lifetime_Op_Profit__c.field-meta.xml
<CustomField>
    <fullName>Account_Est_Lifetime_Op_Profit__c</fullName>
    <label>Account Est Lifetime Op Profit</label>
    <summarizedField>Opportunity.Projected_Opportunity_Lifetime_Profit__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>