force-app/main/default/objects/Account/fields/Account_Name_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Alias__c</fullName>
    <inlineHelpText>Use this field for a user friendly searchable name to help you find the account!</inlineHelpText>
    <label>Account Name Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>