force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <description>Account scorecard total.</description>
    <formula>Training__c +  Organization__c +  Website__c +  Advertising__c +  Mailing_List__c +  Text_Capable__c +  IVR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The account score is the sum total of the training, organization, website, advertising, mailing list, text capable, and IVR scores.</inlineHelpText>
    <label>Account Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>