force-app/main/default/objects/Account/fields/Account_Stage_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_Picklist__c</fullName>
    <label>Account Stage Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Hold</fullName>
                <default>true</default>
                <label>On-Hold (50%)</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <label>Proposal (40%)</label>
            </value>
            <value>
                <fullName>Agreement Requested</fullName>
                <label>Agreement Requested (75%)</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <label>Negotiation (90%)</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <label>Closed Won (100%)</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <label>Closed Lost (0%)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>