force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Active Client</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Inactive/Invalid</fullName>
            </value>
            <value>
                <fullName>Target_Client_Account</fullName>
                <label>Top Client Broker Account</label>
            </value>
            <value>
                <fullName>Target New Broker Account</fullName>
                <label>Top Prospect Broker Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>