force-app/main/default/objects/Account/fields/Account_Team_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Responsible__c</fullName>
    <label>Account Team Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Management</fullName>
            </value>
            <value>
                <fullName>Account Management - BD</fullName>
            </value>
            <value>
                <fullName>HMS - Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>