force-app/main/default/objects/Account/fields/Active_Enrollments_Total__c.field-meta.xml
<CustomField>
    <fullName>Active_Enrollments_Total__c</fullName>
    <label>Active Enrollments Total</label>
    <summaryForeignKey>PON_Enrollments__c.Vendor_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>