force-app/main/default/objects/Account/fields/Advertising__c.field-meta.xml
<CustomField>
    <fullName>Advertising__c</fullName>
    <inlineHelpText>Advertising Score 1 = Worst, 5 = Best</inlineHelpText>
    <label>Advertising</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>