force-app/main/default/objects/Account/fields/Agreement_Type_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type_In_Place__c</fullName>
    <description>Select from the drop down the type of agreement, if any, we have with this account.</description>
    <inlineHelpText>Select from the drop down the type of agreement, if any, we have with this account.</inlineHelpText>
    <label>Agreement Type In Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Sales Agreement (WSA)</fullName>
            </value>
            <value>
                <fullName>Marketing Sales Agreement (MSA)</fullName>
            </value>
            <value>
                <fullName>Advertising Agreement</fullName>
            </value>
            <value>
                <fullName>No Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>