force-app/main/default/objects/Account/fields/Alternate_Account_for_Campaign_Invitatio__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Account_for_Campaign_Invitatio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Account for Campaign Invitatio</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>