force-app/main/default/objects/Account/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <description>BD Call Report</description>
    <label>Call Report</label>
    <type>Url</type>
</CustomField>