force-app/main/default/objects/Account/fields/CCM_Type_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>CCM_Type_Branch_Code__c</fullName>
    <label>CCM Type Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>