force-app/main/default/objects/Account/fields/CCMID__c.field-meta.xml
<CustomField>
    <fullName>CCMID__c</fullName>
    <externalId>true</externalId>
    <label>CCMID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>