force-app/main/default/objects/Account/fields/CCMID_Service_Bench_ID__c.field-meta.xml
<CustomField>
    <fullName>CCMID_Service_Bench_ID__c</fullName>
    <label>CCMID/Service Bench ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>