force-app/main/default/objects/Account/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Client ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>