force-app/main/default/objects/Account/fields/Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Opportunities__c</fullName>
    <label>Closed Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>HMS Opportunities</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>