force-app/main/default/objects/Account/fields/Created_from_Enrollment_FTP__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Enrollment_FTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Enrollment FTP</label>
    <type>Checkbox</type>
</CustomField>