force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this if you do not want any email or other marketing communication to the account and it&apos;s contacts.</description>
    <inlineHelpText>Use this if you do not want any email or other marketing communication to the account and it&apos;s contacts.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>