force-app/main/default/objects/Account/fields/Electronic_Forms_Use__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Forms_Use__c</fullName>
    <description>Use this field to identify the electronic forms being used by each account.</description>
    <inlineHelpText>Use this field to identify the electronic forms being used by each account.  You can select more than one if the account has more than one form provider.</inlineHelpText>
    <label>Electronic Forms Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DotLoop</fullName>
                <label>Dotloop</label>
            </value>
            <value>
                <fullName>ZipForms</fullName>
            </value>
            <value>
                <fullName>Instanet</fullName>
            </value>
            <value>
                <fullName>Skyslope</fullName>
            </value>
            <value>
                <fullName>Owned System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Transaction Desk</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>