force-app/main/default/objects/Account/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <inlineHelpText>Estimate of the company’s annual revenue found on annual report and/or from investor relations</inlineHelpText>
    <label>Estimated Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>