force-app/main/default/objects/Account/fields/Estimated_Eligible_Customer_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Eligible_Customer_File_Size__c</fullName>
    <label>Estimated Eligible Customer File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>