force-app/main/default/objects/Account/fields/Franchise_Name__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Name__c</fullName>
    <label>Franchise Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>