force-app/main/default/objects/Account/fields/Gatekeeper__c.field-meta.xml
<CustomField>
    <fullName>Gatekeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gatekeeper</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Gatekeeper)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>