force-app/main/default/objects/Account/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <label>Industry Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deregulated</fullName>
            </value>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Direct Marketing Carrier</fullName>
            </value>
            <value>
                <fullName>Independent Agency Carrier</fullName>
            </value>
            <value>
                <fullName>Exclusive / Captive Carrier</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Credit Union</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Membership Clubs</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>Traditional / Big Box</fullName>
            </value>
            <value>
                <fullName>Etail</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Home Security</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Smart Home</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Relocations</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail Agency</fullName>
            </value>
            <value>
                <fullName>Agency Cluster</fullName>
            </value>
            <value>
                <fullName>Online Agency</fullName>
            </value>
            <value>
                <fullName>Technology Platform Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>