force-app/main/default/objects/Account/fields/IVR__c.field-meta.xml
<CustomField>
    <fullName>IVR__c</fullName>
    <inlineHelpText>IVR Score 1 = Worst, 5 = Best</inlineHelpText>
    <label>IVR</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>