force-app/main/default/objects/Account/fields/Latest_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Latest_Record_Created__c</fullName>
    <inlineHelpText>This field is just being used by process builder only. This roll up summary field helps to get the date value of latest opportunity.(Before deleting this field we need to take out this from process builder)</inlineHelpText>
    <label>Latest Record Created</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>