force-app/main/default/objects/Account/fields/Length_of_Agreement_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Agreement_Years__c</fullName>
    <inlineHelpText>Represents the initial contract term between CCHS and Client</inlineHelpText>
    <label>Length of Agreement (Years)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>