force-app/main/default/objects/Account/fields/Listings_Sold_Summary__c.field-meta.xml
<CustomField>
    <fullName>Listings_Sold_Summary__c</fullName>
    <label>Listings Sold Summary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>