force-app/main/default/objects/Account/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <description>RDS Location ID</description>
    <externalId>true</externalId>
    <label>Location ID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>