force-app/main/default/objects/Account/fields/Logo_ID__c.field-meta.xml
<CustomField>
    <fullName>Logo_ID__c</fullName>
    <label>Logo ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 - Cinch Generic</fullName>
            </value>
            <value>
                <fullName>301 - Reinhart</fullName>
            </value>
            <value>
                <fullName>302 - Johnstone &amp; Johnstone</fullName>
                <label>302- Johnstone &amp; Johnstone</label>
            </value>
            <value>
                <fullName>303 - Semonin</fullName>
            </value>
            <value>
                <fullName>304 - Keller Williams MO</fullName>
                <label>304 -  Keller Williams MO</label>
            </value>
            <value>
                <fullName>305 - Huff</fullName>
                <label>305 -  Huff</label>
            </value>
            <value>
                <fullName>306 - FC Tucker</fullName>
                <label>306 -  FC Tucker</label>
            </value>
            <value>
                <fullName>307 - Re/Max Realty 100</fullName>
                <label>307 -  Re/Max Realty 100</label>
            </value>
            <value>
                <fullName>85 - Long and Foster</fullName>
                <label>85 -  Long and Foster</label>
            </value>
            <value>
                <fullName>308 - BHHS Preferred Partner</fullName>
                <label>308 -  BHHS Preferred Partner</label>
            </value>
            <value>
                <fullName>318 - BHHS Florida Realty</fullName>
                <label>318 -  BHHS Florida Realty</label>
            </value>
            <value>
                <fullName>309 - ReMax Preferred Partner</fullName>
                <label>309 -   ReMax Preferred Partner</label>
            </value>
            <value>
                <fullName>310 - Weichert franchise</fullName>
            </value>
            <value>
                <fullName>131 - Real Living</fullName>
            </value>
            <value>
                <fullName>311 - BHHS Chicago</fullName>
            </value>
            <value>
                <fullName>312 - Amercian National</fullName>
            </value>
            <value>
                <fullName>313 - Counselor</fullName>
            </value>
            <value>
                <fullName>314 - Coldwell Banker HPW</fullName>
            </value>
            <value>
                <fullName>315 - Signature</fullName>
            </value>
            <value>
                <fullName>316 - Mark Spain</fullName>
            </value>
            <value>
                <fullName>319 - BHHS HSW (Carolina)</fullName>
            </value>
            <value>
                <fullName>66 - Weichert Corporate Private Label</fullName>
            </value>
            <value>
                <fullName>133 - Real Estate One</fullName>
            </value>
            <value>
                <fullName>320 - Dickerson Nieman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>