force-app/main/default/objects/Account/fields/Logo_ID_Code__c.field-meta.xml
<CustomField>
    <fullName>Logo_ID_Code__c</fullName>
    <description>This field comes from TIMX data and identifies the logo ID associated with the broker.  It is used for targeting and selecting and branding for communications.</description>
    <inlineHelpText>This field comes from TIMX data and identifies the logo ID associated with the broker.  It is used for targeting and selecting and branding for communications.</inlineHelpText>
    <label>Logo ID Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>