force-app/main/default/objects/Account/fields/Logo_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Logo_ID_Text__c</fullName>
    <formula>LEFT( TEXT(Logo_ID__c) , FIND(&quot;-&quot;, TEXT(Logo_ID__c))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo ID Text</label>
    <type>Text</type>
</CustomField>