force-app/main/default/objects/Account/fields/Mailing_List__c.field-meta.xml
<CustomField>
    <fullName>Mailing_List__c</fullName>
    <inlineHelpText>Mailing List Score 1 = Worst, 5 = Best</inlineHelpText>
    <label>Mailing List</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>