force-app/main/default/objects/Account/fields/Most_Recent_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Enrollment_Date__c</fullName>
    <label>Most Recent Enrollment Date</label>
    <type>Date</type>
</CustomField>