force-app/main/default/objects/Account/fields/Mutual_Permissive_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Permissive_Marketing__c</fullName>
    <label>Mutual Permissive Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Other</valueSetName>
    </valueSet>
</CustomField>