force-app/main/default/objects/Account/fields/Mutual_Permissive_Marketing_exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Permissive_Marketing_exclusivity__c</fullName>
    <label>Mutual Permissive Marketing exclusivity</label>
    <length>150</length>
    <type>Text</type>
</CustomField>