force-app/main/default/objects/Account/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Encouraged to receive by 15% close</inlineHelpText>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>