force-app/main/default/objects/Account/fields/of_Technicians__c.field-meta.xml
<CustomField>
    <fullName>of_Technicians__c</fullName>
    <label># of Technicians</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>