force-app/main/default/objects/Account/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <inlineHelpText>Organization Rank 1 = Worst, 5 = Best</inlineHelpText>
    <label>Organization</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>