force-app/main/default/objects/Account/fields/PON_3_Way_Training_Call__c.field-meta.xml
<CustomField>
    <fullName>PON_3_Way_Training_Call__c</fullName>
    <label>PON 3-Way Training Call</label>
    <type>Date</type>
</CustomField>