force-app/main/default/objects/Account/fields/PON_Declined_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PON_Declined_Sub_Status__c</fullName>
    <label>PON Declined Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No Value</fullName>
            </value>
            <value>
                <fullName>No Retail</fullName>
            </value>
            <value>
                <fullName>Warranty Industry Reputation</fullName>
            </value>
            <value>
                <fullName>Cinch Reputation</fullName>
            </value>
            <value>
                <fullName>Cinch Warranty Volume</fullName>
            </value>
            <value>
                <fullName>Cinch Warranty Payment</fullName>
            </value>
            <value>
                <fullName>Cinch Operations/ServiceBench</fullName>
            </value>
            <value>
                <fullName>Existing Service Plan</fullName>
            </value>
            <value>
                <fullName>Content with Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>