force-app/main/default/objects/Account/fields/PON_Dispatchers__c.field-meta.xml
<CustomField>
    <fullName>PON_Dispatchers__c</fullName>
    <label>PON Dispatchers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>