force-app/main/default/objects/Account/fields/PON_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>PON_Lead_Status__c</fullName>
    <label>PON Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Duplicate in System</fullName>
            </value>
            <value>
                <fullName>Already a Member</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>