force-app/main/default/objects/Account/fields/PON_Non_Warranty_Calls_Week__c.field-meta.xml
<CustomField>
    <fullName>PON_Non_Warranty_Calls_Week__c</fullName>
    <label>PON Non-Warranty Calls/Week</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>