force-app/main/default/objects/Account/fields/PON_Pre_Qualification_Email_Interest__c.field-meta.xml
<CustomField>
    <fullName>PON_Pre_Qualification_Email_Interest__c</fullName>
    <label>PON Pre-Qualification  Email Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>