force-app/main/default/objects/Account/fields/PON_Pre_Qualification_Email_Second__c.field-meta.xml
<CustomField>
    <fullName>PON_Pre_Qualification_Email_Second__c</fullName>
    <label>PON Pre-Qualification Email (Second)</label>
    <type>Date</type>
</CustomField>