force-app/main/default/objects/Account/fields/PON_Pre_Qualification_Email_Third__c.field-meta.xml
<CustomField>
    <fullName>PON_Pre_Qualification_Email_Third__c</fullName>
    <label>PON Pre-Qualification Email (Third)</label>
    <type>Date</type>
</CustomField>