force-app/main/default/objects/Account/fields/PON_PreQualification_Email_First__c.field-meta.xml
<CustomField>
    <fullName>PON_PreQualification_Email_First__c</fullName>
    <label>PON Pre-Qualification Email (First)</label>
    <type>Date</type>
</CustomField>