force-app/main/default/objects/Account/fields/PON_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>PON_Source_ID__c</fullName>
    <label>PON Source ID</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PON</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>FLO</fullName>
            </value>
            <value>
                <fullName>SNAD</fullName>
            </value>
            <value>
                <fullName>Buoy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>