force-app/main/default/objects/Account/fields/PON_Welcome_Pack__c.field-meta.xml
<CustomField>
    <fullName>PON_Welcome_Pack__c</fullName>
    <label>PON Welcome Pack</label>
    <type>Date</type>
</CustomField>